fix: replaced .getFirst() with .get(0)